# pipegame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
piper/: AxesEntity.cpp  AxesEntity.hpp  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  MeshEntity.cpp  MeshEntity.hpp  PiperRadialSimulation.cpp  PiperRadialSimulation.hpp  RadialSimulation.cpp  RadialSimulation.hpp  glitter.hpp  main.cpp
piper/meshes/: Cylinder.cpp  Cylinder.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Ring.cpp  Ring.hpp  Triangle.cpp  Triangle.hpp
piper/shaders/: MvpShader.cpp  MvpShader.hpp  PointLightingShader.cpp  PointLightingShader.hpp  Shader.cpp  Shader.hpp  Uniform.cpp  Uniform.hpp
piper/utils/: angles.cpp  angles.hpp  filesystem.cpp  filesystem.hpp  probability.cpp  probability.hpp
shaders/: fragment.fs  vertex.vs
shaders/debug/: mvp_color.vs
